--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://joestephenk10:qYrKUDP9xEhjXJcw@cluster0.d8iag.mongodb.net/e-commerce?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
+SALT_ROUNDS=11
