--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "Joe Stephen",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.1",
+    "@types/morgan": "^1.9.9",
     "nodemon": "^3.1.7",
     "typescript": "^5.7.2"
   },
@@ -21,6 +23,7 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.6",
     "express": "^4.21.1",
-    "mongoose": "^8.8.3"
+    "mongoose": "^8.8.3",
+    "morgan": "^1.10.0"
   }
 }
