--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.6",
     "express": "^4.21.1",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^8.8.3",
     "morgan": "^1.10.0"
   }
